# nkCryptoTool

./: .gitattributes  .gitignore  CMakeLists.txt  COPYING  COPYING.LESSER  CryptoConfig.hpp  CryptoError.hpp  CryptoProcessor.cpp  CryptoProcessor.hpp  ECCStrategy.cpp  ECCStrategy.hpp  GETTING_STARTED.md  HISTORY.md  HybridStrategy.cpp  HybridStrategy.hpp  ICryptoStrategy.hpp  IKeyProvider.hpp  KeyProvider.hpp  OpenSSLDeleters.hpp  PERFORMANCE_ANALYSIS.md  PQCStrategy.cpp  PQCStrategy.hpp  PipelineManager.cpp  PipelineManager.hpp  README.md  SECURITY.md  SecureMemory.hpp  TODO.md  TPMConstants.hpp  TPMUtils.hpp  TpmKeyProvider.hpp  TpmSecure.hpp  async_file_types.hpp  bench.txt  benchmark_results.json  benchmark_results.md  build.txt  commit_message.txt  getopt_long.c  getopt_long.h  (+24 more)
LICENSES/: BSD-LZ4.txt
backend/: IBackend.hpp  OpenSslBackend.cpp  OpenSslBackend.hpp  WolfSslBackend.cpp  WolfSslBackend.hpp
benchmark/: BenchMain.cpp
benchmark_keys/: private_enc_ecc.key  private_enc_hybrid_ecdh.key  private_enc_hybrid_mlkem.key  private_enc_pqc.key  public_enc_ecc.key  public_enc_hybrid_ecdh.key  public_enc_hybrid_mlkem.key  public_enc_pqc.key
build_final/: CTestTestfile.cmake  cmake_test_discovery_e0a22a9269.json  unit_tests[1]_include.cmake  unit_tests[1]_tests.cmake
build_wolfssl/: CTestTestfile.cmake  cmake_test_discovery_e0a22a9269.json  e2e_test_input.txt  unit_tests[1]_include.cmake  unit_tests[1]_tests.cmake
test_keys/: private_enc_hybrid_ecdh.key  private_enc_hybrid_mlkem.key  public_enc_hybrid_ecdh.key  public_enc_hybrid_mlkem.key
test_keys_real_tpm/: private_enc_hybrid_ecdh.key  private_enc_hybrid_mlkem.key  public_enc_hybrid_ecdh.key  public_enc_hybrid_mlkem.key
test_keys_tpm/: private_enc_hybrid_ecdh.key  private_enc_hybrid_mlkem.key  public_enc_hybrid_ecdh.key  public_enc_hybrid_mlkem.key
tests/: E2ETests.cmake  crypto_tool_test.cpp
tests/unit/: unit_tests.cpp
